# ghpush

./: .env.example  .gitignore  LICENSE  README.md  build.yml  project_structure  pyproject.toml  setup.py
.github/workflows/: publish.yml
ghpush/: __init__.py  ai_summarizer.py  cli.py  config.py  diff_analyzer.py  git_operations.py  validators.py
gpush/: __init__.py  ai_summarizer.py  validators.py
src/gpush/: ai_summarizer.py  cli.py  config.py  main.py
