[tool.poetry]
name = "gpush"
version = "0.1.0"
description = "Automated GitHub PR creation tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "gpush", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.3"
gitpython = "^3.1.31"
rich = "^13.3.5"
openai = "^1.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gpush = "gpush.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"