[tool.poetry]
name = "gpush"
version = "0.1.0"
description = "Automated GitHub PR creation tool"
authors = ["Sukeesh <vsukeeshbabu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/sukeesh/gpush"
repository = "https://github.com/sukeesh/gpush"
keywords = ["github", "pull-request", "automation", "cli"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [{include = "gpush", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.3"
gitpython = "^3.1.31"
rich = "^13.3.5"
openai = "^1.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gpush = "gpush.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"