[tool.poetry]
name = "ghpush"
version = "0.1.8"

description = "AI-powered GitHub PR creation tool that automatically generates PR titles and descriptions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
homepage = "https://github.com/sukeesh/ghpush"
repository = "https://github.com/sukeesh/ghpush"
keywords = ["github", "pull-request", "automation", "cli", "openai", "git"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [{include = "ghpush", from = "ghpush"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.3"
gitpython = "^3.1.31"
rich = "^13.3.5"
openai = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
ghpush = "ghpush.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"